--- a/gemini-chat-backend/Dockerfile
+++ b/gemini-chat-backend/Dockerfile
@@ -1,14 +1,14 @@
-# OpenJDK 17 image as the base image
-FROM openjdk:17
+# Use a lightweight Java runtime image
+FROM openjdk:17-jdk-slim
 
-# Set the working directory in the container
+# Set working directory inside container
 WORKDIR /app
 
-# Copy the JAR file to the container
-COPY target/gemini-app-backend.jar .
+# Copy the jar file from target folder to /app in container
+COPY target/*.jar gemini-app.jar
 
-# Expose the port
+# Expose the port to 8080
 EXPOSE 8080
 
-# Start the application
-CMD ["java", "-jar", "gemini-app-backend.jar"]
+# run the jar file
+ENTRYPOINT ["java", "-jar", "gemini-app.jar"]
